--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <title>Spring Recipe</title>
     <!-- Import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
 
